--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "adopt-me",
   "version": "1.0.0",
-  "description": "",
+  "description": "Adopt me!",
   "main": "index.js",
+  "homepage": "https://Gulnar-Mammadli.github.io/adopt-me",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier  --write \"src//**/*.{js,jsx,ts,tsx}\" ",
     "lint": "eslint \"src//**/*.{js,jsx,ts,tsx}\" --quiet",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
-  "author": "",
+  "author": "Gulnar Mammadli",
   "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-react": "2.1.0",
@@ -27,6 +30,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "4.10.1",
+    "gh-pages": "^6.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.1"
