--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [20.x]
@@ -30,3 +28,8 @@ jobs:
       run: npm test --if-present
     - name: Build
       run: npm run build --if-present
+    - name: Upload artifact to enable deployment
+      uses: actions/upload-artifact@v3
+      with:
+        name: poduction file
+        path: ./adopt-me/build
