--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,6 +10,9 @@ jobs:
   build:
     name: Build & Test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
     strategy:
       matrix:
         node-version: [20.x]
@@ -27,24 +30,13 @@ jobs:
       run: npm test --if-present
     - name: Build
       run: npm run build --if-present
-    - name: Upload artifact to enable deployment
-      uses: actions/upload-artifact@v3
-      with:
-        name: poduction file
-        path: adopt-me/src/build
   deploy:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: poduction file
-          path:  adopt-me/src/build
-
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }} 
-          publish_dir:  adopt-me/src/build
+          publish_dir:  src/build
